# playground

./: .gitmodules
bash_cpu_load_run/: README.md  run.sh  shell.nix
bench_fork_speed/: CMakeLists.txt  README.md  main.c
bench_fork_speed/asm/: CMakeLists.txt  fork.asm
bigint/: result.md  toms.patch
bigint/gmpbench-0.2/: RES-multiply-128  RES-multiply-128,128  RES-multiply-131072  RES-multiply-2097152  RES-multiply-512  RES-multiply-8192  a.out  divide  gcd  gcdext  gepxr  gexpr  multiply  pi  rsa  runbench
ckks/: .gitignore  README.md  pyproject.toml  python-shell.nix  shell.nix
ckks/ckks/: ckks_bootstrapping_context.py  ckks_decryptor.py  ckks_encoder.py  ckks_encryptor.py  ckks_evaluator.py  ckks_key_generator.py  ckks_parameters.py
ckks/ckks/util/: crt.py  ntt.py  number_theory.py  polynomial.py
ckks/opencl/: .gitignore  CMakeLists.txt  README.md  init.cpp  init.h  ntt.cpp  shell.nix  test.cl  test.cpp
ckks/tests/: helper.py  test_ntt.py
floating_point/: RESULT.md
floating_point/bigfloat-bench/: Cargo.toml
floating_point/bigfloat-bench/src/: astro.rs  number.rs  tasks.rs
floating_point/cln-1.3.7/: Makefile  cln.pc  config.status  libtool
floating_point/cln-1.3.7/benchmarks/: Makefile  timebench1  timebench2a  timebench2ap  timebench2b
floating_point/cln-1.3.7/benchmarks/.deps/: timebench1.Po  timebench2a.Po  timebench2ap.Po  timebench2b.Po
floating_point/cln-1.3.7/benchmarks/.libs/: timebench1  timebench2a  timebench2ap  timebench2b
floating_point/cln-1.3.7/doc/: Makefile
floating_point/cln-1.3.7/examples/: Makefile  contfrac  e  fibonacci  legendre  lucaslehmer  nextprime  perfnum  pi
floating_point/cln-1.3.7/examples/.deps/: contfrac.Po  e.Po  fibonacci.Po  legendre.Po  lucaslehmer.Po  nextprime.Po  perfnum.Po  pi.Po
floating_point/cln-1.3.7/examples/.libs/: contfrac  e  fibonacci  legendre  lucaslehmer  nextprime  perfnum  pi
floating_point/cln-1.3.7/src/: Makefile  libcln.la
floating_point/cln-1.3.7/src/.libs/: libcln.lai
floating_point/cln-1.3.7/tests/: Makefile
floating_point/libbf-2025-04-26/: bfbench  bfbench-avx2  bfpi
floating_point/mpfr-4.2.2/: Makefile  config.status  libtool  mpfr.pc
floating_point/mpfr-4.2.2/doc/: Makefile
floating_point/mpfr-4.2.2/src/: Makefile  abort_prec_max.lo  acos.lo  acosh.lo  acosu.lo  add.lo  add1.lo  add1sp.lo  add_d.lo  add_ui.lo  agm.lo  ai.lo  asin.lo  asinh.lo  asinu.lo  atan.lo  atan2.lo  atan2u.lo  atanh.lo  atanu.lo  bernoulli.lo  beta.lo  buildopt.lo  cache.lo  cbrt.lo  check.lo  clear.lo  clears.lo  cmp.lo  cmp2.lo  cmp_d.lo  cmp_ld.lo  cmp_si.lo  cmp_ui.lo  cmpabs.lo  cmpabs_ui.lo  comparisons.lo  compound.lo  const_catalan.lo  const_euler.lo  (+218 more)
floating_point/mpfr-4.2.2/src/.deps/: abort_prec_max.Plo  acos.Plo  acosh.Plo  acosu.Plo  add.Plo  add1.Plo  add1sp.Plo  add_d.Plo  add_ui.Plo  agm.Plo  ai.Plo  asin.Plo  asinh.Plo  asinu.Plo  atan.Plo  atan2.Plo  atan2u.Plo  atanh.Plo  atanu.Plo  bernoulli.Plo  beta.Plo  buildopt.Plo  cache.Plo  cbrt.Plo  check.Plo  clear.Plo  clears.Plo  cmp.Plo  cmp2.Plo  cmp_d.Plo  cmp_ld.Plo  cmp_si.Plo  cmp_ui.Plo  cmpabs.Plo  cmpabs_ui.Plo  comparisons.Plo  compound.Plo  const_catalan.Plo  const_euler.Plo  const_log2.Plo  (+217 more)
floating_point/mpfr-4.2.2/src/.libs/: libmpfr.lai  libmpfr.so.6.2.2
floating_point/mpfr-4.2.2/tests/: Makefile
floating_point/mpfr-4.2.2/tools/bench/: Makefile  mpfrbench
floating_point/mpfr-4.2.2/tune/: Makefile
fq_estimator/: .gitignore  Makefile  OptimizeFqDec.ipynb  Peters.ipynb  Peters.sage  README.md  isdfq.c  shell.nix
fq_estimator/.jukit/: Peters_outhist.json
imgui-flame-graph/: .gitignore  CMakeLists.txt  TextEditor.cpp  TextEditor.h  compare.h  imgui_widget_flamegraph.cpp  imgui_widget_flamegraph.h  shell.nix
imgui-flame-graph/.cache/clangd/index/: imconfig.h.A875D0F0DEF012E5.idx  imgui.cpp.E4AA68CF6B2AB585.idx  imgui.h.EBFAA9DAA10C9909.idx  imgui_demo.cpp.4D77D0A486CE7668.idx  imgui_draw.cpp.2A32D29366CCC251.idx  imgui_impl_opengl3.cpp.358278E2F6BDDC54.idx  imgui_impl_opengl3.h.3A0A3F9DAF820EE6.idx  imgui_impl_opengl3_loader.h.D753DF9F2A3261A3.idx  imgui_impl_sdl2.cpp.27F4B876773B05D7.idx  imgui_impl_sdl2.h.B70B342A300F741B.idx  imgui_internal.h.A06701F1E9A66855.idx  imgui_tables.cpp.FD3E832D231AD0B6.idx  imgui_widget_flamegraph.cpp.6A054C80A5F28625.idx  imgui_widget_flamegraph.h.C68C8DB3E6241993.idx  imgui_widgets.cpp.D40293D4D1D16EEF.idx  imstb_rectpack.h.F5AD75DEA2383C53.idx  imstb_textedit.h.6723F53A096CFADA.idx  imstb_truetype.h.08E61B7025577CBA.idx  main.cpp.85A8942E5181F0F3.idx
imgui-flame-graph/example/: CMakeLists.txt  compare.cpp  demo.cpp  helper.h  main.cpp  main2.cpp  node.cpp  sequence.data
imgui-flame-graph/flamegraph-rs/: Cargo.toml
imgui-flame-graph/flamegraph-rs/src/: flamegraph.rs  main.rs
imgui-flame-graph/flamegraph-rs/src/support/: mod.rs
lll_rs/: Cargo.toml  README.md  shell.nix
lll_rs/src/: lib.rs
lll_rs/src/math/: matrix.rs  number.rs  vector.rs
msr/: .gitignore  Makefile  README.md  msr.c  msr.h
numba_test/: .gitignore  shell.nix  test.py
python_tests/: shell.nix  test.py
slurm_webserver/.github/workflows/: rust.yml
tii-workshop-2025/: Cargo.toml  shell.nix
tii-workshop-2025/p44/src/: lib.rs
tii-workshop-2025/p52/: Cargo.toml
tii-workshop-2025/p52/src/: lib.rs
tii-workshop-2025/p54/src/: lib.rs
tii-workshop-2025/p62/: libminaes.h
tii-workshop-2025/p62/libminiaes/: Cargo.toml
tii-workshop-2025/p62/libminiaes/src/: lib.rs
tii-workshop-2025/p62/miniaes/: Cargo.toml
tii-workshop-2025/p62/miniaes-sys/: Cargo.toml  build.rs
tii-workshop-2025/p62/miniaes-sys/src/: lib.rs
tii-workshop-2025/p62/miniaes/src/: lib.rs
(+852 files in other folders)
