[project]
name = "ckks"
version = "0.1.0"
description = ""
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Security :: Cryptography",
]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools]
packages = ["ckks", "tests"]

[tool.setuptools.package-data]

[tool.pytest.ini_options]
testpaths = [ "tests", "cryptanalysislib"]
