[package]
name = "lll_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
rug = { version = "1.27.0", features = ["integer", "float", "std", "serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
debug = false
lto = true

[profile.bench]
opt-level = 3
debug = false
lto = true

#[[bench]]
#name = "benchmark"
#harness = false

[features]
default = []
normal_arithmetic = []
